@@ -63,6 +63,8 @@ Revision 4.2.5rc2
   does not let you to configure different securityModels per securityname
   at VACM though the cfgCmdGen() wrapper.
 - MIB builder traceback formatting and reporting improved.
+- Fix to usmUserSecurityName table column implementation -- automatic value
+  generation from index value removed.
 - Fix and significant logic rework of snmpCommunityTable to make it working
   in both Generator and Responder modes and better follow RFC2576 
   requirements on sequential entries lookup and selection. As a side effect,
